# CGMetalC

./: CMakeLists.txt  README.md  build-xcode.sh  build.sh
CGMetalC.xcworkspace/: contents.xcworkspacedata
CGMetalC/CGMetalC/: AppDelegate.h  AppDelegate.m  BasicFilter.cpp  CGMetalCplus.h  CGMetalView.m  CGRender.hpp  MetalCplus.h  MetalCplus.mm  MetalMain.cpp  MetalMain.hpp  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
CGMetalC/CGMetalC.xcodeproj/: project.pbxproj
CGMetalC/CGMetalC/metal-cpp/SingleHeader/: Metal.hpp
CGMetalOS/CGMetalOS/: CGMetalOS.h
CGMetalOS/CGMetalOS.xcodeproj/: project.pbxproj
CGMetalOS/CGMetalOS.xcodeproj/xcshareddata/xcschemes/: CGMetalOS.xcscheme
CGMetalOS/CGMetalOS/CGMetalOS.docc/: CGMetalOS.md
CGMetalOS/CGMetalOS/Source/: CGMetal.h
CGMetalOS/CGMetalOS/Source/Basic/: CGMetalBasic.h  CGMetalBasic.m  CGMetalBasic.metal  CGMetalBasicFour.h  CGMetalBasicFour.m  CGMetalBasicThree.h  CGMetalBasicThree.m  CGMetalBasicTwo.h  CGMetalBasicTwo.m  CGMetalHeader.h
CGMetalOS/CGMetalOS/Source/Core/: CGMetalBlit.h  CGMetalBlit.m  CGMetalContext.h  (+21 more)
framework/: CMakeLists.txt  README.md
framework/render/: Metal_CPP_Header.h  MyAppDelegate.cpp  MyAppDelegate.h  Renderer.cpp  Renderer.h  main.cpp
framework/render/drawable/: TextureDrawable.h
framework/render/layer/: RenderLayer.cpp  RenderLayer.h
metal-cpp/: build.sh
workspace/CGMetalC/CGMetalC/: AppDelegate.h  BasicFilter.hpp  CGMetalView.h  CGRender.cpp  ViewController.h  ViewController.mm  main.m
workspace/CGMetalC/CGMetalC.xcodeproj/: project.pbxproj
(+96 files in other folders)
